# Sap-Quick-Launcher

./: CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  build_output.txt  index.html  package-lock.json  package.json  tailwind.config.js
docs/: docs.html  index.html
keygen/: generate_license.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/resources/: index.html
src-tauri/resources/assets/: index-CedGH6hH.js  index-DL7sv_zO.css
src-tauri/src/: lib.rs  main.rs
src/components/: ActivationModal.tsx  BatchActionBar.tsx  ConfirmDialog.tsx  ConnectionCard.tsx  ConnectionForm.tsx  ConnectionList.tsx  EmptyState.tsx  Footer.tsx  GroupManageModal.tsx  Header.tsx  MeteorCanvas.tsx  Modal.tsx  NebulaCanvas.tsx  OnboardingTour.tsx  Particles.css  Particles.tsx  PathConfigModal.tsx  SettingsModal.tsx  StarfieldCanvas.tsx  StarrySky.css  StarrySky.tsx  Toast.tsx  Tooltip.tsx  index.ts
src/hooks/: useTranslation.ts
src/types/: index.ts
