[package]
name = "sap-quick-launcher"
version = "1.0.0"
description = "SAP Quick Launcher"
authors = ["you"]
edition = "2021"

[lib]
name = "sap_quick_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"

[profile.release]
# panic = "abort"  # 暂时禁用，方便调试闪退问题
codegen-units = 1
lto = true
opt-level = "s"
strip = true
